<resources>
    <string name="app_name">DemoSQLiteApp</string>
    <string name="welcome">Welcome to my application</string>
    <string name="desc">This app is Demo SQLite</string>
    <string name="category">Category</string>
    <string name="product">Product</string>
    <string name="todo">TODO</string>
    <string name="category_id">Category ID</string>
    <string name="category_name">Category Name</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="price_product">Price Product</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="id_category_01_test">ID CateGory: 01</string>
    <string name="test_name_category">Name Category: Nguyễn Quang Minh</string>
    <string name="test">ID: 1</string>
    <string name="test_name">Name: Product 1</string>
    <string name="test_price">Price: 1000</string>
    <string name="category_test">Category: 1</string>
    <string name="change_language">Change Language</string>
    <string name="en">EN</string>
    <string name="vi">VI</string>
</resources>