<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".EditProductActivity">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:src="@drawable/product"
        android:layout_marginTop="20dp"
        android:id="@+id/imageEditProduct"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_product"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:id="@+id/textEditProduct"
        app:layout_constraintTop_toBottomOf="@id/imageEditProduct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_id"
        android:id="@+id/textInputEditId"
        app:startIconDrawable="@drawable/id"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/textEditProduct">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/editTextEditIdProduct"
            android:enabled="false"
            android:importantForAutofill="no"
            android:inputType="text|number" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        app:startIconDrawable="@drawable/cat"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/textInputName"
        app:layout_constraintTop_toBottomOf="@id/textInputEditId">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/editTextEditNameProduct"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_product"
        app:startIconDrawable="@drawable/price"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/textEditInputPrice"
        app:layout_constraintTop_toBottomOf="@id/textInputName">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/editTextEditPriceProduct"
            android:importantForAutofill="no"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/spinnerEditCategory"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/textEditInputPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearEdit"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/spinnerEditCategory"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnCancelProduct"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/cancel"
                android:textSize="20sp"
                android:drawableEnd="@drawable/cancel_edit_product"
                android:background="@drawable/background_button"
                app:backgroundTint = "@null"
                style="?android:attr/button"/>
            <Button
                android:id="@+id/btnSubmitProduct"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/save"
                android:textSize="20sp"
                android:drawableEnd="@drawable/save_edit_item"
                android:background="@drawable/background_button"
                app:backgroundTint = "@null"
                style="?android:attr/button"/>
        </LinearLayout>

    </LinearLayout>
    <ImageButton
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:id="@+id/backEditProduct"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>