<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CategoryActivity">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:src="@drawable/category"
        android:layout_marginTop="20dp"
        android:id="@+id/imageCategory"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:id="@+id/textCategory"
        app:layout_constraintTop_toBottomOf="@id/imageCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_id"
        android:id="@+id/textInputId"
        app:startIconDrawable="@drawable/id"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/textCategory">

        <EditText
            android:id="@+id/editTextIdCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="no"
            android:inputType="text|number" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_name"
        app:startIconDrawable="@drawable/cat"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/textInputName"
        app:layout_constraintTop_toBottomOf="@id/textInputId">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/editTextNameCategory"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/textInputName"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnAddCategory"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/add"
                android:textSize="20sp"
                android:drawableEnd="@drawable/add_category"
                android:background="@drawable/background_button"
                app:backgroundTint = "@null"/>
        </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:padding="20dp"
          android:orientation="horizontal">
          <Button
              android:id="@+id/btnDeleteCategory"
              android:layout_width="140dp"
              android:layout_height="wrap_content"
              android:layout_marginEnd="20dp"
              android:text="@string/delete"
              android:textSize="20sp"
              android:drawableEnd="@drawable/delete_category"
              android:background="@drawable/background_button"
              app:backgroundTint = "@null"
              style="?android:attr/buttonGravity" />
          <Button
              android:id="@+id/btnEditCategory"
              android:layout_width="140dp"
              android:layout_height="wrap_content"
              android:text="@string/edit"
              android:textSize="20sp"
              android:drawableEnd="@drawable/edit_category"
              android:background="@drawable/background_button"
              app:backgroundTint = "@null"
              style="?android:attr/buttonGravity" />
      </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ListView
            android:id="@+id/listViewCategory"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>
    <ImageButton
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:id="@+id/backCategory"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>